--- a/mapbox/green/green_coverage.html
+++ b/mapbox/green/green_coverage.html
@@ -70,7 +70,7 @@ Do you find any mistakes in the following code?
     <!-- Mapbox code -->
     <script type="text/javascript"> 
 
-        mapboxgl.accessToken = 'pk.eyJ1IjoibnlhbWF0byIsImEiOiJja2Y4dzNkOW8wY3MwMnFvM29iNnJzNzVzIn0.GHlHwu3r5YjKBU3qAKvccQ';
+        mapboxgl.accessToken = 'pk.eyJ1IjoibnlhbWF0byIsImEiOiJjbWxvdWE5cnUwOHQyM2Rxems3ZHFjNHRtIn0.FE09FM6lxL7dZSJtsLAFEg';
         const map = new mapboxgl.Map({
             container: 'mymap',
             style: 'mapbox://styles/mapbox/satellite-v9',
