--- a/mapbox/gdp/gdp.html
+++ b/mapbox/gdp/gdp.html
@@ -1,20 +1,15 @@
 <!DOCTYPE html>
-<html lang="jp">
+<html lang="ja"><!-- 修正: "jp" → "ja" -->
 
 <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3D mapping</title>
-    <!-- jquery cdn -->
-    <script src="https://code.jquery.com/jquery-3.6.0.min.js"
-        integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
-    <!-- Bootstrap CDN -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
     <!-- mapbox -->
     <link href="https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.css" rel="stylesheet">
     <script src="https://api.mapbox.com/mapbox-gl-js/v2.14.1/mapbox-gl.js"></script>
+    <!-- 修正: 未使用の jQuery・Bootstrap を削除 -->
     <style>
         body {
             margin: 0;
@@ -27,13 +22,13 @@
             bottom: 0;
             width: 100%;
         }
-        
-        .popup-content {
+
+        .mapboxgl-popup-content .popup-content {
             font-size: 18px;
             font-weight: bold;
         }
 
-        /* ===== sidebar =====*/
+        /* ===== sidebar ===== */
         #sidebar {
             position: absolute;
             z-index: 2;
@@ -42,8 +37,8 @@
             width: auto;
             padding: 20px;
         }
-        
-        .indicator-title{
+
+        .indicator-title {
             color: white;
             font-size: 50px;
         }
@@ -59,8 +54,11 @@
     </div>
 
     <div id="map"></div>
+
     <script>
+
         mapboxgl.accessToken = 'pk.eyJ1IjoibnlhbWF0byIsImEiOiJjbWxvdWE5cnUwOHQyM2Rxems3ZHFjNHRtIn0.FE09FM6lxL7dZSJtsLAFEg';
+
         const map = new mapboxgl.Map({
             container: 'map',
             style: 'mapbox://styles/mapbox/satellite-v9',
@@ -68,100 +66,83 @@
             zoom: 5,
             pitch: 30,
             bearing: -10,
-            center: [138.2906, 37.5873],
+            center: [138.29058267382655, 37.58725360866509],
         });
 
         map.on('style.load', () => {
             map.setFog({
-                color: 'rgb(186, 210, 235)', // Lower atmosphere
-                'high-color': 'rgb(36, 92, 223)', // Upper atmosphere
-                'horizon-blend': 0.02, // Atmosphere thickness (default 0.2 at low zooms)
-                'space-color': 'rgb(11, 11, 25)', // Background color
-                'star-intensity': 0.6 // Background star brightness (default 0.35 at low zoooms )
+                color: 'rgb(186, 210, 235)',
+                'high-color': 'rgb(36, 92, 223)',
+                'horizon-blend': 0.02,
+                'space-color': 'rgb(11, 11, 25)',
+                'star-intensity': 0.6
             });
         });
 
-
         map.on('load', () => {
 
-            //##### 都道府県別GDP #####//
-            // Add a source for the city polygons.
+            // ##### 都道府県別GDP ##### //
             map.addSource('volume', {
                 'type': 'geojson',
                 'data': 'prefectures_GDP.geojson'
             });
+
             map.addLayer({
                 'id': 'volume',
                 'type': 'fill-extrusion',
                 'source': 'volume',
                 'paint': {
-                    // Get the `fill-extrusion-color` from the source `color` property.['get', 'color']
                     'fill-extrusion-color': [
                         'interpolate',
                         ['linear'],
                         ['get', 'GDP_2021年'],
-                        0,
-                        '#3288bd',  // Cool Blue
-                        15000000,
-                        '#66c2a5',  // Turquoise
-                        30000000,
-                        '#abdda4',  // Light Green
-                        45000000,
-                        '#e6f598',  // Pale Yellow
-                        60000000,
-                        '#fee08b',  // Light Orange
-                        75000000,
-                        '#fdae61',  // Orange
-                        90000000,
-                        '#f46d43',  // Red-Orange
-                        105000000,
-                        '#d53e4f',  // Red
-                        120000000,
-                        '#d53e4f'   // Red
+                        0,        '#3288bd',
+                        15000000, '#66c2a5',
+                        30000000, '#abdda4',
+                        45000000, '#e6f598',
+                        60000000, '#fee08b',
+                        75000000, '#fdae61',
+                        90000000, '#f46d43',
+                        105000000,'#d53e4f',
+                        120000000,'#d53e4f'
                     ],
-
-                    // Get `fill-extrusion-height` from the source `height` property.
                     'fill-extrusion-height': ['*', ['get', 'GDP_2021年'], 0.002],
-
-                    // Get `fill-extrusion-base` from the source `base_height` property.['get', 'base_height']
                     'fill-extrusion-base': 0,
-
-                    // Make extrusions slightly opaque to see through indoor walls.
                     'fill-extrusion-opacity': 1.0,
                 }
             });
 
+            // クリック時のポップアップ
+            map.on('click', 'volume', (e) => {// 修正: function → アロー関数に統一
+                if (e.features && e.features.length > 0) {
+                    const feature = e.features[0];
+                    const name = feature.properties.name || "Unknown";
+                    const gdp = feature.properties['GDP_2021年']
+                        ? parseInt(feature.properties['GDP_2021年'])
+                        : 0;
+                    // 修正: gdpを兆円に変換してからtoLocaleString()を適用（二重のparseIntを修正）
+                    const gdpTrilion = (gdp / 1000000).toLocaleString();
 
-        // When a click event occurs on a feature in the cities layer, open a popup at the
-        // location of the click, with description HTML from its properties.
-        map.on('click', 'volume', function (e) {
-            if (e.features && e.features.length > 0) {
-                const feature = e.features[0];
-                const name = feature.properties.name || "Unknown";
-                const gdp = feature.properties["GDP_2021年"] ? parseInt(feature.properties["GDP_2021年"]) : 0;
+                    new mapboxgl.Popup()
+                        .setLngLat(e.lngLat)
+                        .setHTML(`<div class="popup-content">${name}: ${gdpTrilion} 兆円</div>`)// 修正: 閉じタグ </div> を追加
+                        .addTo(map);
+                } else {
+                    console.warn('No features found on click.');
+                }
+            });
 
-                new mapboxgl.Popup()
-                    .setLngLat(e.lngLat)
-                    .setHTML(`<div class="popup-content">${name}: ${parseInt((gdp / 1000000).toLocaleString())} 兆円`)
-                    .addTo(map);
-            } else {
-                console.warn("No features found on click.");
-            }
-        });
+            // カーソル変更
+            map.on('mouseenter', 'volume', () => {// 修正: function → アロー関数に統一
+                map.getCanvas().style.cursor = 'pointer';
+            });
 
+            map.on('mouseleave', 'volume', () => {// 修正: function → アロー関数に統一
+                map.getCanvas().style.cursor = '';
+            });
 
-        // Change the cursor to a pointer when the mouse is over the cities layer.
-        map.on('mouseenter', 'volume', function () {
-            map.getCanvas().style.cursor = 'pointer';
-        });
-
-        // Change it back to a pointer when it leaves.
-        map.on('mouseleave', 'volume', function () {
-            map.getCanvas().style.cursor = '';
-        });
-
+            // 修正: addControl を map.on('load') 内に統一（インデント修正）
             map.addControl(new mapboxgl.NavigationControl());
-
         });
     </script>
 
