--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
 		<link rel="stylesheet" href="dist/reveal.css">
 		<link rel="stylesheet" href="dist/theme/black.css">
 		<link rel="icon" href="./img/favicon.ico">
-
 		<!-- Theme used for syntax highlighted code -->
 		<link rel="stylesheet" href="plugin/highlight/monokai.css">
 
@@ -20,7 +19,7 @@
 				display: flex;
 				justify-content: center;
 				align-items: center;
-				height: 100vh; /* 修正: 100% → 100vh */
+				height: 100vh;
 			}
 		</style>
 	</head>
@@ -39,9 +38,7 @@
 				<section>
 					<!-- 都道府県別GDP -->
 					<section data-fullscreen="false" data-background-color="rgb(0, 0, 0)" data-transition="fade-out" data-transition-speed="slow">
-						<!-- 修正: class="stretch" → class="r-stretch"、allow="fullscreen" を追加 -->
-						<iframe class="r-stretch" data-src="./mapbox/gdp/gdp.html" data-preload frameborder="0"
-							allowfullscreen allow="fullscreen"></iframe>
+						<iframe class="r-stretch" data-src="./mapbox/gdp/gdp.html" data-preload frameborder="0" allowfullscreen allow="fullscreen"></iframe>
 					</section>
 				</section>
 					
