--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 				<section>
 					<!-- 都道府県別GDP -->
 					<section data-fullscreen="false" data-background-color="rgb(0, 0, 0)" data-transition="fade-out" data-transition-speed="slow">
-						<iframe class="r-stretch" data-src="./mapbox/gdp/gdp.html" data-preload frameborder="0" allowfullscreen allow="fullscreen"></iframe>
+						<iframe class="r-stretch" data-src="./mapbox/gdp/gdp.html" data-preload frameborder="0" allow="fullscreen"></iframe>
 					</section>
 				</section>
 					
