--- a/index.html
+++ b/index.html
@@ -40,6 +40,10 @@
 					<section data-fullscreen="true" data-background-color="rgb(0, 0, 0)" data-transition="fade-out" data-transition-speed="slow">
 						<iframe class="r-stretch" data-src="./mapbox/boundary/boundary.html" data-preload frameborder="0" allow="fullscreen"></iframe>
 					</section>
+					<!-- 世界人口 -->
+					<section data-fullscreen="true" data-background-color="rgb(0, 0, 0)" data-transition="fade-out" data-transition-speed="slow">
+						<iframe class="r-stretch" data-src="./mapbox/population/world_population.html" data-preload frameborder="0" allow="fullscreen"></iframe>
+					</section>
 				</section>
 				
 				<!-- ====================== 経済分野 ====================== -->
