--- a/mapbox/population/world_population.html
+++ b/mapbox/population/world_population.html
@@ -93,22 +93,21 @@
                         'interpolate',
                         ['linear'],
                         ['get', 'POP_EST'],
-                        0,          '#f7fbff',  // 白に近い青（人口少）
-                        10000000,   '#c6dbef',
-                        50000000,   '#6baed6',
-                        100000000,  '#2171b5',
-                        500000000,  '#084594',
-                        1400000000, '#08306b',  // 濃い青（人口多）
+                        0,          '#fff5f0',  // 白に近い赤（人口少）
+                        10000000,   '#fcc4a4',
+                        50000000,   '#fc8d59',
+                        100000000,  '#e34a33',
+                        500000000,  '#b30000',
+                        1400000000, '#67000d',  // 濃い赤（人口多）
                     ],
-                    'fill-opacity': 0.7,
                 },
             });
             // ===== ポップアップ表示 =====
                 map.on('click', 'world_population', (e) => {
                     const feature = e.features[0];
-                    const popupName  = feature.properties.popup_name  || 'N/A';
-                    const popupValue = feature.properties.popup_value || '';
-                    const popupUnit  = feature.properties.popup_unit  || '';
+                    const popupName  = feature.properties.WB_NAME  || 'N/A';
+                    const popupValue = feature.properties.POP_EST || '';
+                    const popupUnit  = '人';
 
                     new mapboxgl.Popup({ closeButton: true })
                         .setLngLat(e.lngLat)
@@ -130,6 +129,8 @@
                     map.getCanvas().style.cursor = '';
                 });
             });
+
+
 
 
     </script>
